--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,24 +1,6 @@
-body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.428571429;
-    color: #333333;
-    background-color: #FFFFFF;
+.nav-link{
+    color: lightgray;
 }
-.container{
-    display: block;
-    background: #FFFFFF;
-    border: black solid 1px;
-    border-radius: 10px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.5), inset 0 1px rgba(255,255,255,0.3), inset 0 10px rgba(255,255,255,0.2), inset 0 10px 20px rgba(255,255,255,0.25), inset 0 -15px 30px rgba(0,0,0,0.1);;
-    margin: auto;
-}
-blockquote{
-    background: lightgray;
-    font-size: 14px;
-    border: darkgray dotted 2px;
-    border-radius: 5px;
-    margin-left: 20px;
-    margin-right: 200px;
-
+.form-check-input{
+    opacity: 0;
 }
